# stock

./: .gitignore  README.md  pyproject.toml
src/stock/: __init__.py  cli.py
src/stock/commands/: analyze.py  data.py
src/stock/utils/: custom.py
